初步可用的网站

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: '关于'
-description: 'Hey, 这里是guuguo的博客.'
+description: '你好, 我是guuguo(锅锅).'
 header-img: 'img/post-bg-rwd.jpg'
 ---
 
