--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
-title: Tags
+title: 标签
 layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+description: 求知若渴
+header-img: "img/tag-bg-o.jpg"
 ---
 
 <!-- Page Header -->
