--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = null;
+    var serviceWorkerVersion = '4272185010';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
